[gd_scene load_steps=5 format=3 uid="uid://bwihk7d6hxrxv"]

[ext_resource type="Script" path="res://StageTmp/Stage.gd" id="1_gqmi0"]
[ext_resource type="PackedScene" uid="uid://maxnmrquor30" path="res://MapTmp/Map.tscn" id="2_m7gak"]
[ext_resource type="PackedScene" uid="uid://cxta8k7wfv2o" path="res://StageTmp/Action/DestinySelect/DestinySelect.tscn" id="2_npbw8"]
[ext_resource type="PackedScene" uid="uid://5vsoc8cmhi3y" path="res://StageTmp/HUD/HUD.tscn" id="3_0tu53"]

[node name="Stage" type="Node"]
script = ExtResource("1_gqmi0")

[node name="DestinySelect" parent="." instance=ExtResource("2_npbw8")]

[node name="Map" parent="." instance=ExtResource("2_m7gak")]
visible = false
mouse_filter = 2

[node name="HUD" parent="." instance=ExtResource("3_0tu53")]
mouse_filter = 2

[connection signal="stage_done" from="DestinySelect" to="." method="action_done"]
[connection signal="start_stage" from="Map" to="." method="action_start"]
[connection signal="saveQuit" from="HUD" to="." method="saveAndQuit"]
